test/classes/delete-free/tests-from-design-overview/generic-collection-owned-int-error.good
generic-collection-owned-int-error.chpl:11: In function 'test':
generic-collection-owned-int-error.chpl:12: error: unresolved type specifier 'Collection(type int(64))'
generic-collection-owned-int-error.chpl:3: note: this candidate did not match: Collection(type element)
generic-collection-owned-int-error.chpl:12: note: because call actual argument #1 with type int(64)
generic-collection-owned-int-error.chpl:4: note: is passed to formal 'element: owned'
